--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -79,16 +79,37 @@ input:focus {
 }
 
 .container {
-	background-color: #fff;
-	border-radius: 10px;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-			0 10px 10px rgba(0,0,0,0.22);
-	position: relative;
-	overflow: hidden;
-	width: 650px;
-	max-width: 100%;
-	min-height: 450px;
-    
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+              0 10px 10px rgba(0, 0, 0, 0.22);
+  position: relative;
+  overflow: hidden;
+  width: 850px; /* aumentamos el ancho */
+  max-width: 100%;
+  min-height: 600px; /* aumentamos la altura */
+}
+
+.form-container form {
+  overflow-y: auto;
+  max-height: 90%;
+  padding: 20px 50px;
+}
+
+.sign-up-container {
+  left: 0;
+  width: 50%;
+  opacity: 0;
+  z-index: 1;
+  min-height: 100%;
+}
+
+.sign-up-container {
+  left: 0;
+  width: 50%;
+  opacity: 0;
+  z-index: 1;
+  min-height: 100%;
 }
 
 .form-container {
@@ -277,4 +298,29 @@ footer p {
 .radio-group input[type="radio"] {
   margin-right: 8px;
   accent-color: #ff6600;
+}
+
+.tipo-usuario-btn-group {
+  display: flex;
+  gap: 10px; /* Espacio entre botones */
+  justify-content: center; /* Centrado horizontal */
+  margin: 20px 0;
+}
+
+.tipo-usuario-btn {
+  border-radius: 20px;
+  border: 1px solid #ff6600;
+  background-color: #ff6600;
+  color: #FFFFFF;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 12px 30px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: transform 80ms ease-in;
+}
+
+.tipo-usuario-btn.active {
+  background-color: #cc5200; /* O un color distinto para activo */
 }
