--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -79,7 +79,7 @@ input:focus {
 }
 
 .container {
-  background-color: #fff;
+  /* background-color: #fff; */
   border-radius: 10px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
               0 10px 10px rgba(0, 0, 0, 0.22);
@@ -170,6 +170,18 @@ input:focus {
 	transform: translateX(-100%);
 }
 
+
+.overlay {
+  background: transparent;
+  color: #FFFFFF;
+  position: relative;
+  left: -100%;
+  height: 100%;
+  width: 200%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
 .overlay {
 	background: #ff6600;
 	background: -webkit-linear-gradient(to right, #ff6600, #ff6600);
@@ -184,7 +196,7 @@ input:focus {
 	width: 200%;
   	transform: translateX(0);
 	transition: transform 0.6s ease-in-out;
-}
+} 
 
 .container.right-panel-active .overlay {
   	transform: translateX(50%);
