--- a/src/pages/AccountSettings/AccountSettings.css
+++ b/src/pages/AccountSettings/AccountSettings.css
@@ -5,7 +5,7 @@
 }
 
 .sidebar {
-  width: 250px;
+  width: 350px;
   padding: 20px;
   background-color: #f4f4f4;
 }
@@ -15,8 +15,8 @@
 }
 
 .profile-image-circle {
-  width: 100px;
-  height: 100px;
+  width: 250px;
+  height: 250px;
   margin: 0 auto 10px;
   border-radius: 50%;
   background-color: #ddd;
@@ -88,4 +88,30 @@
   font-weight: 500;
   text-align: left;
   width: 100%;
+}
+
+.file-select {
+  position: relative;
+  display: inline-block;
+}
+
+.file-select::before {
+  background-color: #ff6600;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.file-select input[type="file"] {
+  opacity: 0;
+  width: 100px;
+  height: 20px;
+  display: inline-block;
 }
