--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -29,6 +29,28 @@ a {
 	margin: 15px 0;
 }
 
+.logo-section {
+  width: 160px;
+  height: 160px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+img.logo {
+  width: 160px !important;
+  height: 160px !important;
+  object-fit: contain;
+  display: block;
+}
+
+
+.logo-section .app-name {
+  font-size: 1.8em;
+  font-weight: bold;
+  color: #333;
+}
+
 button {
 	border-radius: 20px;
 	border: 1px solid #ff6600;
